--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -26,7 +26,7 @@ block main
             //             span.badge.text-danger-emphasis.m-1= item.count
 
             // TODO: check if this is the right path
-            a(href='/dashboard/summary').btn.btn-primary Summary
+            a(href='/dashboard/event_applications/summary').btn.btn-primary Summary
             //a(href='/dashboard/event_applications/event_applicationID').btn.btn-primary See indiv
 
         .container-md.text-center.p-2.my-3.border
