adding go back button

--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -29,6 +29,8 @@ block main
             //else if (event_application[0][3] === 'declined')
             //    span.badge.text-bg-danger Declined
 
+        a(href='/dashboard/event_applications').btn.btn-secondary Go Back 
+
         hr
 
         mixin application(label)
