--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -63,9 +63,9 @@ block main
                         //option(value='York
             // -- Major
             .row.mb-3
-                span What is your major / primary area of study? If you already graduated, what was your major / primary area of study? Select all that apply.
+                label.col-sm-2.col-form-label(for='major') What is your major / primary area of study? If you already graduated, what was your major / primary area of study? Select all that apply.
                 .col-sm-6
-                    fieldset 
+                    fieldset#major
                         .form-check
                             input#defaultCheck1.form-check-input(type='checkbox', value='Computer science, computer engineering, or software engineering', name='major')
                             label.form-check-label(for='defaultCheck1')
