--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -54,6 +54,7 @@ block main
                         th M
                         th M
                         th M
+                        th M
 
                 tbody
                     each event_application of event_applications
@@ -73,3 +74,8 @@ block main
                             td= event_application[11]
                             td= event_application[12]
                             td= event_application[13]
+                            td= event_application[14]
+                            td= event_application[15]
+                            td= event_application[16]
+                            td= event_application[17]
+                            td= event_application[18]
