--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -62,7 +62,7 @@ block main
                             td
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
                             //td= event_application[1]
-                            td= event_application[2]
+                            //td= event_application[2]
                             td= event_application[3]
                             td= event_application[4]
                             td= event_application[5]
