--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -48,13 +48,17 @@ block main
                         th Country
                         th School
                         th Major
-                        th M
-                        th M
-                        th M
-                        th M
-                        th M
-                        th M
-                        th M
+                        th Education Level
+                        th ?
+                        th Gender
+                        th Pronouns
+                        th Race
+                        th Sexual Orientation
+                        th ?
+                        th T-Shirt Size
+                        th Allergies
+                        th Github
+                        th Linkedin
 
                 tbody
                     each event_application of event_applications
