--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -54,18 +54,29 @@ block main
                         option(selected, value= event_application[5])= event_application[0][5]
                         option(value='United States of America') United States of America
 
+
+            // TODO-- Gender
+            .col-lg-8.m-3
+                label.form-label(for='gender') What gender do you identify as?
+                select#gender.form-select(name='gender', disabled)
+                    option(selected, disabled, value=event_application[10])= event_application[10]
+                    option(value='Man') Man
+                    option(value='Woman') Woman
+                    option(value='Non-Binary') Non-Binary
+                    option(value='Prefer Not to Answer') Prefer Not to Answer
+                    option(value='Other') Other
             // -- School
-            .row.mb-3
-                label.col-sm-2.col-form-label(for='country') School
-                .col-sm-6
-                    select#school.form-select(name='school', disabled)
-                        option(selected, value= event_application[0][6])= event_application[0][6]
-                        //option(value='York
+                        .row.mb-3
+                            label.col-sm-2.col-form-label(for='country') School
+                            .col-sm-6
+                                select#school.form-select(name='school', disabled)
+                                    option(selected, value= event_application[0][6])= event_application[0][6]
+
             // -- Major
             .row.mb-3
                 label.col-sm-2.col-form-label(for='major') Major
                 .col-sm-6
-                    select#major.form-select( name='major', disabled)
+                    select#major.form-select(name='major', disabled)
                         option(selected, value= event_application[0][7])= event_application[0][7]
                         option(value= 'Prefer not to answer') Prefer not to answer
             //.row.mb-3
@@ -132,6 +143,115 @@ block main
             //                input#defaultCheck15.form-check-input(type='checkbox', value='Prefer not to answer', name='major')
             //                label.form-check-label(for='defaultCheck15')
             //                    | Prefer not to answer
+            // todo -- Food Restrictions
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='food')
+                .col-sm-6
+                    select#food.form-select(name='food_restrict', disabled)
+                        option(selected='', value=event_application[16])=event_application[16]
+                        option(value='Yes') Yes
+                        option(value='No') No
+            // todo -- T-Shirt Size
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='tshirt')
+                .col-sm-6
+                    select#tshirt.form-select(name='t_shirt_size', disabled)
+                        option(selected, value=event_application[15])= event_application[15]
+                        option(value='S') SM
+                        option(value='M') MD
+                        option(value='L') LG
+                        option(value='XL') XL
+                        option(value='XXL') XXL
+            // -------------------------------------------
+            // todo -- Pronouns
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='pronoun') Pronouns
+                .col-sm-6
+                    select#pronoun.form-select(name='pronoun', disabled)
+                        option(selected='', value=event_application[11])= event_application[11]
+                        option(value='he/him') he/him
+                        option(value='she/her') she/her
+                        option(value='they/them') they/them
+                        option(value='Other') Other
+                        option(value='Prefer Not to Answer') Prefer Not to Answer
+            //// todo -- Major
+            //.row.mb-3
+            //    label.col-sm-2.col-form-label(for='major')
+            //    .col-sm-6
+            //        select#major.form-select(name='major')
+            //            option(selected='', disabled='') Select
+            //            option(value='Computer science, computer engineering, or software engineering') Computer science, computer engineering, or software engineering
+            // todo -- underrep group
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='identify')
+                .col-sm-6
+                    select#identify.form-select(name='underrep_group', disabled)
+                        option(selected='', value=event_application[14])= event_application[14]
+                        option(value='Yes') Yes
+                        option(value='No') No
+                        option(value='Unsure') Unsure
+                        option(value='Prefer not to answer') Prefer not to answer
+            // todo -- race
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='describe')
+                .col-sm-6
+                    select#describe.form-select(name='race', disabled)
+                        option(selected, value=event_application[12])= event_application[12]
+                        option(value='Asian Indian') Asian Indian
+                        option(value='Black or African') Black or African
+                        option(value='Chinese') Chinese
+                        option(value='Filipino') Filipino
+                        option(value='Guamanian or Chamorro') Guamanian or Chamorro
+                        option(value='Hispanic / Latino / Spanish Origin') Hispanic / Latino / Spanish Origin
+                        option(value='Japanese') Japanese
+                        option(value='Korean') Korean
+                        option(value='Middle Eastern') Middle Eastern
+                        option(value='Native American or Alaskan Native') Native American or Alaskan Native
+                        option(value='Native Hawaiian') Native Hawaiian
+                        option(value='Samoan') Samoan
+                        option(value='Vietnamese') Vietnamese
+                        option(value='White') White
+                        option(value='Other Asian (Thai, Cambodian, etc)') Other Asian (Thai, Cambodian, etc)
+                        option(value='Other Pacific Islander') Other Pacific Islander
+                        option(value='Other') Other
+                        option(value='Prefer not to answer') Prefer not to answer
+            // -- sexual orientation
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='preference')
+                .col-sm-6
+                    select#preference.form-select(name='sexual_orient', disabled)
+                        option(selected, value=event_application[13], disabled)= event_application[13]
+                        option(value='Heterosexual or straight') Heterosexual or straight
+                        option(value='Gay or lesbian') Gay or lesbian
+                        option(value='Bisexual') Bisexual
+                        option(value='Other') Other
+                        option(value='Prefer not to answer') Prefer not to answer
+            // todo -- edu_completed
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='level')
+                .col-sm-6
+                    select#level.form-select(required, name='edu_completed', disabled)
+                        option(selected, value='', disabled) Select
+                        option(value='Less than Secondary / High School') Less than Secondary / High School
+                        option(value='Undergraduate University (2 year - community college or similar)') Undergraduate University (2 year - community college or similar)
+                        option(value='Undergraduate University (3+ year)') Undergraduate University (3+ year)
+                        option(value='Graduate University (Masters, Professional, Doctoral, etc)') Graduate University (Masters, Professional, Doctoral, etc)
+                        option(value='Code School / Bootcamp') Code School / Bootcamp
+                        option(value='Other Vocational / Trade Program or Apprenticeship') Other Vocational / Trade Program or Apprenticeship
+                        option(value='Other') Other
+                        option(value='I’m not currently a student') I’m not currently a student
+                        option(value='Prefer not to answer') Prefer not to answer
+            //  -- github
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='github')
+                .col-sm-6
+                    input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github\..*", name='github', disabled, value=event_application[17])
+
+            //  -- linkedin
+            .row.mb-3
+                label.col-sm-2.col-form-label(for='linkedin')
+                .col-sm-6
+                    input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linkedin', disabled, value=event_application[18])
 
 
             //+application('Name')(value=event_application.name, for="name", id="name")
