--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -67,19 +67,19 @@ block main
                                 a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
                             //td= event_application[1]
                             //td= event_application[2]
-                            td= event_application[3] //- status
-                            td= event_application[4] //- age
-                            td= event_application[5]//-country
-                            td= event_application[6]//-school
-                            td= event_application[7]//-major
-                            td= event_application[8]//-edu level
-                            td= event_application[9]//-?
-                            td= event_application[10]//- gender
-                            td= event_application[11]//- pronoun
-                            td= event_application[12]//-race
-                            td= event_application[13]//-sexual
-                            td= event_application[14]//- underrep group
-                            td= event_application[15]//-t shirt size
-                            td= event_application[16]//- allergues
-                            td= event_application[17]//- github
-                            td= event_application[18]//-linked
+                            td= event_application[3] 
+                            td= event_application[4]
+                            td= event_application[5]
+                            td= event_application[6]
+                            td= event_application[7]
+                            td= event_application[8]
+                            td= event_application[9]
+                            td= event_application[10]
+                            td= event_application[11]
+                            td= event_application[12]
+                            td= event_application[13]
+                            td= event_application[14]
+                            td= event_application[15]
+                            td= event_application[16]
+                            td= event_application[17]
+                            td= event_application[18]
