--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -148,7 +148,7 @@ block main
                 label.col-sm-2.col-form-label(for='food')
                 .col-sm-6
                     select#food.form-select(name='food_restrict', disabled)
-                        option(selected='', value=event_application[16])=event_application[16]
+                        option(selected='', value=event_application[0][16])=event_application[0][16]
                         option(value='Yes') Yes
                         option(value='No') No
             // todo -- T-Shirt Size
@@ -156,7 +156,7 @@ block main
                 label.col-sm-2.col-form-label(for='tshirt')
                 .col-sm-6
                     select#tshirt.form-select(name='t_shirt_size', disabled)
-                        option(selected, value=event_application[15])= event_application[15]
+                        option(selected, value=event_application[0][15])= event_application[0][15]
                         option(value='S') SM
                         option(value='M') MD
                         option(value='L') LG
@@ -168,7 +168,7 @@ block main
                 label.col-sm-2.col-form-label(for='pronoun') Pronouns
                 .col-sm-6
                     select#pronoun.form-select(name='pronoun', disabled)
-                        option(selected='', value=event_application[11])= event_application[11]
+                        option(selected='', value=event_application[0][11])= event_application[0][11]
                         option(value='he/him') he/him
                         option(value='she/her') she/her
                         option(value='they/them') they/them
@@ -186,7 +186,7 @@ block main
                 label.col-sm-2.col-form-label(for='identify')
                 .col-sm-6
                     select#identify.form-select(name='underrep_group', disabled)
-                        option(selected='', value=event_application[14])= event_application[14]
+                        option(selected='', value=event_application[0][14])= event_application[0][14]
                         option(value='Yes') Yes
                         option(value='No') No
                         option(value='Unsure') Unsure
@@ -196,7 +196,7 @@ block main
                 label.col-sm-2.col-form-label(for='describe')
                 .col-sm-6
                     select#describe.form-select(name='race', disabled)
-                        option(selected, value=event_application[12])= event_application[12]
+                        option(selected, value=event_application[0][12])= event_application[0][12]
                         option(value='Asian Indian') Asian Indian
                         option(value='Black or African') Black or African
                         option(value='Chinese') Chinese
@@ -220,7 +220,7 @@ block main
                 label.col-sm-2.col-form-label(for='preference')
                 .col-sm-6
                     select#preference.form-select(name='sexual_orient', disabled)
-                        option(selected, value=event_application[13], disabled)= event_application[13]
+                        option(selected, value=event_application[0][13], disabled)= event_application[0][13]
                         option(value='Heterosexual or straight') Heterosexual or straight
                         option(value='Gay or lesbian') Gay or lesbian
                         option(value='Bisexual') Bisexual
@@ -245,13 +245,13 @@ block main
             .row.mb-3
                 label.col-sm-2.col-form-label(for='github')
                 .col-sm-6
-                    input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github\..*", name='github', disabled, value=event_application[17])
+                    input#github(type="url" class='form-control' placeholder='Github' pattern=".*\.github\..*", name='github', disabled, value=event_application[0][17])
 
             //  -- linkedin
             .row.mb-3
                 label.col-sm-2.col-form-label(for='linkedin')
                 .col-sm-6
-                    input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linkedin', disabled, value=event_application[18])
+                    input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linkedin', disabled, value=event_application[0][18])
 
 
             //+application('Name')(value=event_application.name, for="name", id="name")
