--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -56,7 +56,7 @@ block main
                         option(value='United States of America') United States of America
 
 
-            // TODO-- Gender
+            // -- Gender
             .row.mb-3
                 label.col-sm-2.col-form-label(for='gender') What gender do you identify as?
                 .col-sm-6
@@ -145,7 +145,7 @@ block main
             //                input#defaultCheck15.form-check-input(type='checkbox', value='Prefer not to answer', name='major')
             //                label.form-check-label(for='defaultCheck15')
             //                    | Prefer not to answer
-            // todo -- Food Restrictions
+            //  -- Food Restrictions
             .row.mb-3
                 label.col-sm-2.col-form-label(for='food') Food Restrictions
                 .col-sm-6
@@ -153,7 +153,7 @@ block main
                         option(selected='', value=event_application[0][16])=event_application[0][16]
                         option(value='Yes') Yes
                         option(value='No') No
-            // todo -- T-Shirt Size
+            //  -- T-Shirt Size
             .row.mb-3
                 label.col-sm-2.col-form-label(for='tshirt') T-Shirt Size
                 .col-sm-6
@@ -165,7 +165,7 @@ block main
                         option(value='XL') XL
                         option(value='XXL') XXL
             // -------------------------------------------
-            // todo -- Pronouns
+            //  -- Pronouns
             .row.mb-3
                 label.col-sm-2.col-form-label(for='pronoun') What pronouns do you go by?
                 .col-sm-6
@@ -176,14 +176,14 @@ block main
                         option(value='they/them') they/them
                         option(value='Other') Other
                         option(value='Prefer Not to Answer') Prefer Not to Answer
-            //// todo -- Major
+            ////  -- Major
             //.row.mb-3
             //    label.col-sm-2.col-form-label(for='major')
             //    .col-sm-6
             //        select#major.form-select(name='major')
             //            option(selected='', disabled='') Select
             //            option(value='Computer science, computer engineering, or software engineering') Computer science, computer engineering, or software engineering
-            // todo -- underrep group
+            //  -- underrep group
             .row.mb-3
                 label.col-sm-2.col-form-label(for='identify') Do you identify as part of an underrepresented group in the technology industry?
                 .col-sm-6
@@ -193,7 +193,7 @@ block main
                         option(value='No') No
                         option(value='Unsure') Unsure
                         option(value='Prefer not to answer') Prefer not to answer
-            // todo -- race
+            //  -- race
             .row.mb-3
                 label.col-sm-2.col-form-label(for='describe') Which of the following best describes you?
                 .col-sm-6
@@ -228,7 +228,7 @@ block main
                         option(value='Bisexual') Bisexual
                         option(value='Other') Other
                         option(value='Prefer not to answer') Prefer not to answer
-            // todo -- edu_completed
+            //  -- edu_completed
             .row.mb-3
                 label.col-sm-2.col-form-label(for='level') What is the highest level of formal education that you have completed?
                 .col-sm-6
