--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -5,7 +5,7 @@ extends includes/dashboard_bar
 block main
 
     if(userRoles.includes('Organizer'))
-        h1.m-2 Event Applications
+        .display-5.m-2 Event Applications
 
         .container-md.text-center.p-2.border
 
