--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -2,8 +2,7 @@ extends includes/dashboard_bar
 
 
 block main
-    p= userRoles
-
+    //p= userRoles
     if(userRoles.includes('Organizer'))
         .display-5.m-2 Home
         .outside.bd-example.bd-example-cols.m-3
