--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -49,12 +49,12 @@ block main
                         th School
                         th Major
                         th Education Level
-                        th ?
+                        th Underrepresented Group
                         th Gender
                         th Pronouns
                         th Race
                         th Sexual Orientation
-                        th ?
+                        th Highest education Level
                         th T-Shirt Size
                         th Allergies
                         th Github
