--- a/src/views/event_application.pug
+++ b/src/views/event_application.pug
@@ -288,7 +288,7 @@ block main
 
             button.mx-1.btn.btn-info(onclick=`edit()`) Edit
 
-            button#update.mx-1.btn.btn-success.disabled(disabled) Update/Save
+            button#update.mx-1.btn.btn-success.disabled(disabled, onclick="save()") Update/Save
 
 
     .container-md.text-center.p-4.border
