--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -72,16 +72,20 @@ block main
                     th(scope='col') Status
                     th(scope='col') Location
                 tbody
-                    // each item of data
-                    //     tr
-                    //         each value of item
-                    //             td=value
-                    //         td
-                    //             .d-grid.gap-2.text-nowrap.justify-content-evenly
-                    //                 a.btn.btn-secondary(href='') Message on Discord
-                    //                 button.btn.btn-danger(type='button') Return Item
-                                //.d-grid.gap-2.text-nowrap.justify-content-evenly
-                                //    button.btn.btn-danger(type='button') Return Item
-                                //a(href='https://discordapp.com/api/webhooks/1092228852203401236/T6EP0MZrnFnhHaHXN4_ZLcDusZ7NOVTgwA5SWwpkrhXjV35K7GxNKhauhMbDlEKRUpe7')
+                     each hardware of hardware_items
+                         tr
+                            td= hardware[0]
+                            td= hardware[1]
+                            td= hardware[2]
+                            td= hardware[3]
+                            td= hardware[4]
+                             // each value of item
+                             //     td=value
+                             // td
+                             //     .d-grid.gap-2.text-nowrap.justify-content-evenly
+                             //         a.btn.btn-secondary(href='') Message on Discord
+                             //         button.btn.btn-danger(type='button') Return Item
+                             //    .d-grid.gap-2.text-nowrap.justify-content-evenly
+                             //        button.btn.btn-danger(type='button') Return Item
 
     //// PARTICIPANT VIEW
