--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -13,7 +13,6 @@ block main
                         .col.text-decoration-none
                             .p-3= title
                                 span.badge.text-bg-secondary.m-1 0
-
                     +badges('Total Applicants')
                     +badges('RSVPd')
                     +badges('Hardware Checkouts')
@@ -79,42 +78,93 @@ block main
             //            p.card-text
             //                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
             //            a.btn.btn-primary(href='#') Go somewhere
-
     else if (userRoles.includes('Attendee'))
         .display-5.m-2 Home
         .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
+            // -- If no application
             .col
                 .card.m-1
                     .card-body
-                        h2.card-title Check In
+                        h2.card-title Hey, Attendee!
                         hr
                         p.card-text
-                            | QR Code
-                        a.btn.btn-primary(href='') Go somewhere
-            .col
-                .card.m-1
-                    .card-body
-                        h2.card-title Upcoming Events
-                        hr
-                        p.card-text
-                            table.table
-                                thead
-                                    tr
-                                        th(scope='col') Event
-                                        th(scope='col') Time
-                                tbody
-                                    tr
-                                        td Event
-                                        td 10:00
-                                    tr
-                                        td Event 1
-                                        td 12:00
-                        a.btn.btn-secondary(href='') View All
-            .col
-                .card.m-1
-                    .card-body
-                        h2.card-title Discord Channel
-                        hr
-                        p.card-text
-                            | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-                        a.btn.btn-primary(href='') Go to Discord Channel
+                            p Yay!! Looks like we got your application
+                            p If there is anything you would like to change in your application,
+                            | head to the My Application tab and change what you want!
+                            p We will send a notification whenever there have been updates
+                            | to your application! :)
+
+        // -- No accont
+    else
+        .display-5.m-2 Home
+            .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
+                // -- If no application
+                .col
+                    .card.m-1
+                        .card-body
+                            h2.card-title Check In
+                            hr
+                            p.card-text
+                                p Yay! You completed the first step to attending our Hackathon!
+                                p In order to participate, you will need to fill out our application
+                                p What better time than now?
+                            a.btn.btn-primary(href='/dashboard/apply') Apply Now!
+
+    //else if (userRoles.includes('Attendee'))
+    //    .display-5.m-2 Home
+    //    .row.row-cols-1.row-cols-md-3.g-0.m-3.text-center
+            // -- Submitted
+
+            //.col
+            //    .card.m-1
+            //        .card-body
+            //            h2.card-title Hey, Attendee!
+            //            hr
+            //            p.card-text
+            //                p Yay!! Looks like we got your application
+            //                p If there is anything you would like to change in your application,
+            //                | head to the My Application tab and change what you want!
+            //                p We will send a notification whenever there have been updates
+            //                | to your application! :)
+
+            // -- Accepted
+
+            //.col
+            //    .card.m-1
+            //        .card-body
+            //            h2.card-title Hey, Attendee!!
+            //            hr
+            //            p.card-text
+            //                p Hey! You've been accepted!
+            //            a.btn.btn-success(href='#') RSVP
+            //            a.btn.btn-danger(href='#') Sorry, I can't participate
+
+            // - RSVP-ed
+
+            //.col
+            //    .card.m-1
+            //        .card-body
+            //            h2.card-title Upcoming Events
+            //            hr
+            //            p.card-text
+            //                table.table
+            //                    thead
+            //                        tr
+            //                            th(scope='col') Event
+            //                            th(scope='col') Time
+            //                    tbody
+            //                        tr
+            //                            td Event
+            //                            td 10:00
+            //                        tr
+            //                            td Event 1
+            //                            td 12:00
+            //            a.btn.btn-secondary(href='#') View All
+            //.col
+            //    .card.m-1
+            //        .card-body
+            //            h2.card-title Discord Channel
+            //            hr
+            //            p.card-text
+            //                | This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+            //            a.btn.btn-primary(href='#') Go to Discord Channel
