--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -107,7 +107,7 @@ block main
                         hr
                         p.card-text
                             p Yay! You completed the first step to attending our Hackathon!
-                            p In order to participate, you will need to fill out our application
+                            p In order to participate, you will need to fill out our application.
                             p What better time than now?
                         a.btn.btn-primary(href='/dashboard/apply') Apply Now!
 
