--- a/src/views/includes/dashboard_bar.pug
+++ b/src/views/includes/dashboard_bar.pug
@@ -22,8 +22,8 @@ block nav
                 a.nav-link(aria-current='page', href='/dashboard') Dashboard Home
             li.nav-item
                 a.nav-link(href='/dashboard/hardware_items') Hardware
-            //li.nav-item
-            //    a.nav-link(href='#') Check In
+            li.nav-item
+                a.nav-link(href='/dashboard/check_in') Check In
             li.nav-item
                 a.nav-link(href='/dashboard/event_applications') Applications
             //li.nav-item
