--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -3,10 +3,11 @@ extends includes/dashboard_bar
 
 block main
     .display-5.m-2 Check In
-
+    p Insert email of attendee to check them in
     form
         .form-floating.mb-3
             input#floatingInput.form-control(type='email', placeholder='name@example.com')
-            label(for='floatingInput') Email address
+            .col-sm-6
+                label(for='floatingInput') Email address
 
         button.btn.btn-outline-secondary(type='submit') Check In
