--- a/src/views/check_in.pug
+++ b/src/views/check_in.pug
@@ -4,13 +4,12 @@ extends includes/dashboard_bar
 block main
     .display-5.m-2 Check In
     p Insert email of attendee to check them in
-    form
-        .form-floating.mb-3
-            label(for='floatingInput') Email address
-            
-            .col-sm-6
-                input#floatingInput.form-control(type='email', placeholder='name@example.com')
-
-
-
-        button.btn.btn-outline-secondary(type='submit') Check In
+    
+    form.row.row-cols-sm-auto.g-3.align-items-center
+        .col-12
+            label.visually-hidden(for='inlineFormInputGroupUsername') Username
+            .input-group
+                .input-group-text @
+                input#inlineFormInputGroupUsername.form-control(type='text', placeholder='Username', fdprocessedid='um6bcf')
+        .col-12
+            button.btn.btn-primary(type='submit', fdprocessedid='fh6cwq') Submit
